--- a/scalable/categories/Makefile.am
+++ b/scalable/categories/Makefile.am
@@ -10,6 +10,7 @@ icons_DATA =				\
 	applications-games.svg	\
 	applications-graphics.svg	\
 	applications-internet.svg	\
+	applications-multimedia.svg	\
 	applications-office.svg	\
 	preferences-desktop.svg
 
